Always launch the grails process directly via `java` using the system properties of the JVM.
This is the only way to have it work in a cross platform manner.